unpackaged/main/default/objects/Compliance_Exception__c/Compliance_Exception__c.object-meta.xml
<CustomObject>
    <label>Compliance Exception</label>
    <nameField>
        <label>Compliance Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>