unpackaged/main/default/objects/Compliance_Exception__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Compliance Exceptions</relationshipLabel>
    <relationshipName>Compliance_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>