unpackaged/main/default/objects/Compliance_Exception__c/fields/Exception_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Exception_Explanation__c</fullName>
    <label>Exception Explanation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>