unpackaged/main/default/objects/Compliance_Exception__c/fields/Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Other_Explanation__c</fullName>
    <label>Other Explanation</label>
    <type>TextArea</type>
</CustomField>