unpackaged/main/default/objects/Compliance_Exception__c/fields/User_Who_Approved_Exception__c.field-meta.xml
<CustomField>
    <fullName>User_Who_Approved_Exception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Who Approved Exception</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliance_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>