unpackaged/main/default/objects/Compliance_Exception__c/listViews/All_Compliance_Exceptions.listView-meta.xml
<ListView>
    <fullName>All_Compliance_Exceptions</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Compliance Exceptions</label>
    <sharedTo>
        <group>Compliance</group>
    </sharedTo>
</ListView>